# editor-on-fire

./: .gitignore  Building_EOF_in_Linux.md  Building_EOF_in_Mac_OSX.md  Building_EOF_in_Windows.md  Building_EOF_in_Windows_Old_Steps 2024 version.md  Building_EOF_in_Windows_Old_Version.md  Building_FoFLyricConverter.md  EOF proposed project format.txt  Guitar Pro 5.10 format.txt  Info.plist  Makefile  ProjectHome.md  README.md  ideas.txt  license.txt  todo.txt
src/: EOF.icns  beat.c  beat.h  beatable.c  beatable.h  bf.c  bf.h  bf_import.c  bf_import.h  bpm.c  bpm.h  chart_import.c  chart_import.h  config.c  config.h  control.c  control.h  dialog.c  dialog.h  dr.c  dr.h  drumbeats.c  drumbeats.h  editor.c  editor.h  event.c  event.h  feedback.c  feedback.h  gh_import.c  gh_import.h  gp_import.c  gp_import.h  gui.c  gui.h  ini.c  ini.h  ini_import.c  ini_import.h  ir.c  (+65 more)
src/agup/: LICENCE.txt  (+19 more)
src/foflc/: CMakeLists.txt  EOF_logic.c  FoFLyricConvert.c  ID3_parse.c  ID3_parse.h  JB_parse.c  JB_parse.h  LRC_parse.c  LRC_parse.h  Lyric_storage.c  Lyric_storage.h  Midi_parse.c  Midi_parse.h  RS_parse.c  RS_parse.h  SRT_parse.c  Script_parse.c  Script_parse.h  UStar_parse.c  UStar_parse.h  VL_parse.c  XML_parse.c  history.txt  makefile.common  makefile.linux  makefile.macosx  makefile.mingw  makefile.mingw_cross  readme.txt
tests/: test_invariant_wfsel.c
trunk/: EOF proposed project format.txt  Guitar Pro 5.10 format.txt  Info.plist  Makefile  build.txt  customhopo.txt  ideas.txt  license.txt  todo.txt
wiki/: Building_EOF_in_Linux.wiki  Building_EOF_in_Windows.wiki  (+1 more)
(+212 files in other folders)
